# obs-studio

./: appveyor.yml
cmake/Modules/: CopyMSVCBins.cmake  FindAMDAMF.cmake  FindAMDAPP.cmake
plugins/: CMakeLists.txt
plugins/win-vceamf/: CMakeLists.txt  conversion.cpp  conversion.hpp  device-dx11.cpp  device-dx11.hpp  device-ocl.cpp  device-ocl.hpp  devicedx11.cpp  devicedx11.hpp  win-vceamf-plugin-main.cpp  win-vceamf.cpp
plugins/win-vceamf/data/locale/: en-US.ini
